<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/pause_resume"
        tools:layout_editor_absoluteX="146dp" />

    <Button
        android:id="@+id/pause_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="@string/pause"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="146dp" />

    <TextView
        android:id="@+id/distance_textview"
        android:layout_width="185dp"
        android:layout_height="71dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="160dp"
        android:text="@string/curr_distance"
        app:layout_constraintBottom_toTopOf="@+id/start_stop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>