<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/headLine_Result"
        android:layout_width="186dp"
        android:layout_height="59dp"
        android:text="@string/result_headline"
        app:layout_constraintStart_toStartOf="@+id/result_down_tv"
        app:layout_constraintTop_toBottomOf="@+id/space2" />

    <TextView
        android:id="@+id/result_distance_tv"
        android:layout_width="88dp"
        android:layout_height="37dp"
        android:text="@string/distance"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/space3" />

    <TextView
        android:id="@+id/result_up_tv"
        android:layout_width="93dp"
        android:layout_height="43dp"
        android:text="@string/up"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/space4" />

    <TextView
        android:id="@+id/result_down_tv"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:text="@string/down"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/space5" />

    <Space
        android:id="@+id/space"
        android:layout_width="89dp"
        android:layout_height="729dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_distance"
        android:layout_width="98dp"
        android:layout_height="33dp"
        app:layout_constraintStart_toEndOf="@+id/result_distance_tv"
        app:layout_constraintTop_toBottomOf="@+id/space3" />

    <TextView
        android:id="@+id/result_up"
        android:layout_width="89dp"
        android:layout_height="43dp"
        app:layout_constraintStart_toEndOf="@+id/result_up_tv"
        app:layout_constraintTop_toBottomOf="@+id/space4" />

    <TextView
        android:id="@+id/result_down"
        android:layout_width="87dp"
        android:layout_height="37dp"
        app:layout_constraintStart_toEndOf="@+id/result_down_tv"
        app:layout_constraintTop_toBottomOf="@+id/space5" />

    <Space
        android:id="@+id/space3"
        android:layout_width="188dp"
        android:layout_height="83dp"
        app:layout_constraintStart_toStartOf="@+id/result_down_tv"
        app:layout_constraintTop_toBottomOf="@+id/headLine_Result" />

    <Space
        android:id="@+id/space2"
        android:layout_width="184dp"
        android:layout_height="52dp"
        app:layout_constraintStart_toEndOf="@+id/space"
        tools:layout_editor_absoluteY="1dp" />

    <Space
        android:id="@+id/space4"
        android:layout_width="186dp"
        android:layout_height="33dp"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/result_distance_tv" />

    <Space
        android:id="@+id/space5"
        android:layout_width="186dp"
        android:layout_height="42dp"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/result_up_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>